# Osanwe

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.bootstrap/: part-00  part-01  part-02  part-03  part-04  part-05
.github/workflows/: autoformat.yml  bootstrap-artifact.yml  bootstrap-restore.yml  ci.yml  debug-build.yml  export-tree.yml  release.yml
docs/superpowers/plans/: 2026-07-21-curl-install.md  2026-07-21-grok-stale-session-recovery.md  2026-07-21-interactive-pane-orchestrator.md  2026-07-21-quit-and-purge-session.md  2026-07-23-v0-1-hardening.md
docs/superpowers/specs/: 2026-07-21-grok-stale-session-recovery-design.md  2026-07-21-interactive-pane-orchestrator-design.md  2026-07-21-quit-and-purge-session-design.md  2026-07-23-v0-1-hardening-design.md
src/: checks.rs  cli.rs  daemon.rs  hook.rs  ipc.rs  lib.rs  main.rs  mcp.rs  model.rs  onboard.rs  pane.rs  process.rs  project.rs  provider.rs  session_launch.rs  state.rs  store.rs  tui.rs  workspace.rs  zellij.rs
src/daemon/: handlers_core.rs  handlers_events.rs  handlers_results.rs  persistence.rs  prompting.rs  spawning.rs  support.rs
tests/: domain.rs  install.sh  mcp.rs  project_session.rs  provider.rs  release.rs  zellij.rs  zellij_live.rs
