[package]
name = "osanwe"
version = "0.1.1"
edition = "2021"
description = "Interactive Codex and Grok pane orchestrator for Zellij"
license = "MIT"
repository = "https://github.com/bengHak/Osanwe"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "process", "rt-multi-thread"] }
toml = "0.8"
uuid = { version = "1.12", features = ["v4"] }

[dev-dependencies]
tempfile = "3.15"

[lints.rust]
unsafe_code = "forbid"
